bootstrap/vendor/github.com/google/go-jsonnet/cpp-jsonnet/test_suite/error.slice_out_of_bounds.sugar.jsonnet.golden
RUNTIME ERROR: Array bounds error: 6 not within [0, 6)
	std.jsonnet:92:46-58	thunk <array_element>
	During manifestation	
